# ATeam

./: .gitignore  README.md  build_and_run.ps1  change.md  change10.md  change11.md  change2.md  change3.md  change4.md  change5.md  change6.md  change7.md  change8.md  change9.md  deploy_to_pypi.py  docker-compose.yml  frontend_mock.py  imp_thoughts.md  knowledgebase.md  plan.md  playground.py  pyproject.toml  requirements.txt  responses.md  run_tests.py  task.md  test_fixed_standalone.py  test_model_update.py
ateam/: __init__.py  cli.py
backend/: __init__.py  agent.py  agent_manager.py  agents.yaml  backend_api.py  chat_engine.py  embedding.yaml  embedding_manager.py  frontend_api.py  kb_manager.py  llm_auto_reply_prompts.py  llm_interface.py  main.py  manager_registry.py  models.py  models.yaml  models_manager.py  monitoring.py  notification_manager.py  notification_utils.py  objects_registry.py  prompt_manager.py  prompts.yaml  provider_manager.py  providers.yaml  pyrightconfig.json  schema_manager.py  schemas.py  streaming.py  streaming_manager.py  test_streaming_manager.py  tool_descriptor.py  tool_executor.py  tool_manager.py  tools.yaml
docs/: API.md
frontend/: index.html  jest.config.js  package-lock.json  package.json  vite.config.ts
prompts/: create_agent.md  god_system.md
tests/: conftest.py  test_agent.py  test_basic.py  test_change3_cases.py  test_config.py  test_console.py  test_context_reconstruction.py  test_duplicate_agent.py  test_fs.py  test_llm_integration.py  test_mcp.py  test_overlay_integration.py  test_ownership_enforcement.py  (+11 more)
(+124 files in other folders)
